# VE482

./: README.md
Lab/Lab10/: su
Lab/Lab5/src/Linklist/: CMakeLists.txt  Cmd.c  Menu.c  api.c  api.h  interface.c  interface.h  kernel.c  kernel.h  rand_int.txt
Lab/Lab5/src/dlist/: dlist.c  dlist.h
Lab/Lab9/: Lab 9 Dice Module.docx  Makefile  dice.c  lab9.tex
p1/: Makefile  README.md  execute.c  input.c  main.c  mumsh  mumsh_memory_check  shell.h  split.c
p2/: CMakeLists.txt  README.md  commit.json  main.cpp  status.csv  time.csv
p2/db/: Database.cpp  Database.h  Table.cpp  Table.h  threadpool.cpp  threadpool.h
p2/query/: Query.h  QueryBuilders.cpp  QueryBuilders.h  QueryDerived.cpp  QueryDerived.h  QueryParser.h  QueryResult.h  Task.h  multi_thread.cpp  multi_thread.h
p2/query/data/: AddQuery.cpp  AddQuery.h  CountQuery.cpp  CountQuery.h  DeleteQuery.cpp  DeleteQuery.h  DuplicateQuery.cpp  DuplicateQuery.h  InsertQuery.cpp  InsertQuery.h  MaxQuery.cpp  MaxQuery.h  MinQuery.cpp  MinQuery.h  SelectQuery.cpp  SelectQuery.h  SubQuery.cpp  SubQuery.h  SumQuery.cpp  SumQuery.h  SwapQuery.cpp  SwapQuery.h  UpdateQuery.cpp  UpdateQuery.h
p2/query/management/: CopyTableQuery.cpp  CopyTableQuery.h  DropTableQuery.cpp  DropTableQuery.h  DumpTableQuery.cpp  DumpTableQuery.h  ListTableQuery.cpp  ListTableQuery.h  ListenQuery.cpp  ListenQuery.h  LoadTableQuery.cpp  LoadTableQuery.h  PrintTableQuery.cpp  PrintTableQuery.h  QuitQuery.cpp  QuitQuery.h  TruncateTableQuery.cpp  TruncateTableQuery.h
